@@ -3,6 +3,8 @@ version 1.0 -- UNRELEASED
 	dup:
 	 . Make the .dup generated by ninjahelper more consistent with
 	   example.dup.
+	 . Add support for RackSpace's CloudFiles.
+	   Thanks to Yuval Kogman <nothingmuch@woobling.org> for the patch.
 
 version 0.9.10 -- September 23, 2011
     backupninja changes
